added repo link in footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
   </div>
   {{ end }}
   <div style="padding-top: 10px; border-top: solid 1px; margin: 5px 0; font-size: 0.8em;">
-    {{ .Site.Params.footer }} ghazal by
+    {{ .Site.Params.footer }} <a href="https://github.com/darshanbaral/ghazal">ghazal</a> by
     <a href="https://www.darshanbaral.com/">darshan</a>.
   </div>
 </footer>
