changed scroll to auto for code blocks

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -41,7 +41,7 @@ pre {
   border-radius: 5px;
   font-size: 0.85em;
   background-color: var(--bgAltColor) !important;
-  overflow: scroll;
+  overflow: auto;
 }
 
 header,
