updated css for quotes, tables, and footnotes

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer style="display: flex; flex-direction: column;">
+<footer style="display: flex; flex-direction: column; margin-top: 0.5em;">
   {{ if eq .Kind "page" }} {{ partial "prevnext.html" . }} {{ end }}
   {{ if eq  .Kind "section" }}
   <div>
