--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,7 @@
 :root {
   --bgColor: #381460;
-  --bgAltColor: #2b0f49;
+  --bgDarker: #2b0f49;
+  --bgLighter: #4a2d69;
   --textColor: #ffbd69;
   --primaryColor: #fe346e;
   --primaryHoverColor: #fe346e;
@@ -19,7 +20,7 @@ body {
   z-index: 10;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 0;
   max-width: 960px;
   margin: auto;
   color: var(--textColor);
@@ -27,7 +28,6 @@ body {
   font-family: "Mukta", sans-serif;
   font-weight: 300;
   font-size: 1.2em;
-  overflow-y: scroll;
 }
 
 code {
@@ -40,7 +40,7 @@ pre {
   border: solid 1px;
   border-radius: 5px;
   font-size: 0.85em;
-  background-color: var(--bgAltColor) !important;
+  background-color: var(--bgDarker) !important;
   overflow: auto;
 }
 
@@ -65,7 +65,10 @@ main {
 
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5,
+h6 {
   font-weight: 300;
   line-height: 1.2em;
 }
@@ -74,7 +77,7 @@ h1 {
   font-size: 2.2em;
 }
 
-h1 {
+h2 {
   font-size: 1.8em;
 }
 
@@ -90,6 +93,27 @@ a {
 a:hover {
   color: var(--textColor);
   text-decoration: underline;
+}
+
+blockquote {
+  padding-left: 10px;
+  border-left: solid 5px var(--textColor);
+  background-color: var(--bgLighter);
+}
+
+.footnotes {
+  font-size: 0.8em;
+}
+
+table {
+  border-collapse: collapse;
+}
+thead {
+  border-top: solid 3px var(--textColor);
+  border-bottom: solid 1px var(--textColor);
+}
+tbody {
+  border-bottom: solid 2px var(--textColor);
 }
 
 .hamburger-cross {
@@ -189,7 +213,7 @@ li.page-item:nth-child(6) {
   display: inline-block;
   text-align: center;
   min-width: 100px;
-  margin-bottom: 1em;  
+  margin-bottom: 1em;
 }
 
 .previous-link.active,
