--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,41 @@
 {{ define "main" }}
 <div
-  style="height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center;"
+  style="
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  "
 >
   {{ partial "intro.html" . }}
   <div
-    style="display: flex; flex-direction: column; align-items: center; justify-content: center; width: 80vw; height: 80vw; min-width: 250px; min-height: 250px; max-width: 400px; max-height: 400px;"
+    style="
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 80vw;
+      height: 80vw;
+      min-width: 250px;
+      min-height: 250px;
+      max-width: 400px;
+      max-height: 400px;
+    "
   >
     <div
-      style="position: absolute; display: none; opacity: 0; transition: all 0.8s ease-in-out 0s; padding: 5px; max-width: 400px; max-height: 400px; box-sizing: border-box;"
+      style="
+        position: absolute;
+        opacity: 0;
+        padding: 25px;
+        min-width: 250px;
+        min-height: 250px;
+        max-width: 400px;
+        max-height: 400px;
+        box-sizing: border-box;
+        transition: opacity 0.8s;
+        z-index: 10;
+      "
       class="more-info"
     >
       <p style="margin: 0 0 0.25em 0; font-size: 0.9em; text-align: center;">
@@ -15,7 +43,18 @@
       </p>
       {{ partial "social.html" . }}
     </div>
-    <div class="profile-image" style="background-color: inherit; display: block; opacity: 1; visibility: visible; transition: all 0.8s ease-in-out 0s;">
+    <div
+      class="profile-image"
+      style="
+        background-color: inherit;
+        opacity: 1;
+        visibility: visible;
+        transition: opacity 0.8s, width 0.8s, transform 0.8s;
+        cursor: pointer;
+        width: 100%;
+        transform: none;
+      "
+    >
       <img
         src="{{ .Site.Params.image | relURL }}"
         style="width: 100%; height: 100%; border-radius: 100%;"
