--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,9 +1,26 @@
 <div
-  style="font-size: 2.2em; margin: 0 0 0.5em 0; display: flex; flex-direction: row; flex-wrap: wrap; align-items: center; justify-content: center; color: var(--primaryColor); text-align: center; line-height: 1.25em;"
+  style="
+    font-size: 2.2em;
+    margin: 0 0 0.5em 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    color: var(--primaryColor);
+    text-align: center;
+    line-height: 1.25em;
+  "
 >
   {{.Site.Params.title}}
   <div
-    style="width: 20px; line-height: 0; padding: 1px 7px; margin-left: 0.35em; border-radius: 7px;"
+    style="
+      width: 20px;
+      line-height: 0;
+      padding: 1px 7px;
+      margin-left: 0.35em;
+      border-radius: 7px;
+    "
     class="show-more-info chevron-hz"
     onclick="showInfo()"
   >
@@ -20,18 +37,20 @@
 
     if (showMoreInfo.classList.contains("chevron-hz")) {
       showMoreInfo.classList.remove("chevron-hz");
-      profileImage.style.opacity = "0";
-      profileImage.style.visibility = "hidden";
       chevron.style.transform = "rotate(90deg)";
-      moreInfo.style.display = "block";
+      profileImage.style.opacity = "0";
+      profileImage.style.width = "0";
+      profileImage.style.transform = "rotate(180deg)";
+      moreInfo.style.visibility = "visible";
       moreInfo.style.opacity = "1";
     } else {
       showMoreInfo.classList.add("chevron-hz");
-      profileImage.style.display = "block";
-      profileImage.style.opacity = "1";
+      chevron.style.transform = "none";
       profileImage.style.visibility = "visible";
-      chevron.style.transform = "rotate(0deg)";
-      moreInfo.style.display = "none";
+      profileImage.style.width = "100%";
+      profileImage.style.transform = "none";
+      profileImage.style.opacity = "1";
+      moreInfo.style.visibility = "hidden";
       moreInfo.style.opacity = "0";
     }
   };
