--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
   <body>
     {{- partial "header.html" . -}}
     {{- partial "menu.html" . -}}
-    <main id="content" style="padding: 10px; {{if not .IsHome }}margin-top: 80px; {{ end }}">
+    <main id="content" {{if not .IsHome }} style="padding: 0 5px; margin-top: 80px;" {{ end }}>
       {{- block "main" . }}{{- end }}
     </main>
     {{ if not .IsHome }}
