--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,30 +4,24 @@
   {{- .Title -}}
 </h1>
 
-<div>
-  {{ range (.Paginator .Site.Params.theme.paginateNum).Pages }}
-  <div
-    style="
-      border: solid 1px;
-      margin: 30px 0;
-      padding: 10px;
-      border-radius: 5px;
-      background-color: var(--bgAltColor);
-    "
+{{ range (.Paginator .Site.Params.theme.paginateNum).Pages }}
+<div
+  class="list-sections"
+  style="border-bottom: dashed 1px; margin: 0; padding: 12px 0;"
+>
+  <span style="font-size: 0.65em; font-style: italic;"
+    ><time>{{- dateFormat .Site.Params.theme.dateFormat .Date }}</time> &middot;
+    {{.Site.Params.author }}</span
   >
-    <a href="{{ .Permalink | relURL }}">
-      <h2 style="margin: 0; font-size: 1.2em;">{{ .Title -}}</h2>
-    </a>
-    <span style="font-size: 0.65em; font-style: italic;"
-      ><time>{{- dateFormat .Site.Params.theme.dateFormat .Date }}</time>
-      &middot; {{.Site.Params.author }}</span
-    >
-    <p style="margin: 0; font-size: 0.8em;">
-      {{ .Summary | plainify | truncate 180 }}
-    </p>
-  </div>
-  {{ end }}
+  <a href="{{ .Permalink | relURL }}">
+    <h2 style="margin: 0; font-size: 1.2em;">{{ .Title -}}</h2>
+  </a>
+  <p style="margin: 0; font-size: 0.8em;">
+    {{ .Summary | plainify | truncate 100 }}
+  </p>
 </div>
+{{ end }}
+
 <script>
   document.onkeydown = function (e) {
     const thisPage = document.querySelector(".page-item.active");
