--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,6 +2,7 @@
 <div
   style="
     height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,6 +52,7 @@
         visibility: visible;
         transition: opacity 0.8s, width 0.8s, transform 0.8s;
         width: 100%;
+        max-width: 325px;
         transform: none;
       "
     >
