--- a/layouts/partials/hamburgerCross.html
+++ b/layouts/partials/hamburgerCross.html
@@ -1,22 +1,29 @@
 <div
   class="hamburger-cross"
-  style="position: fixed; top: 15px; z-index: 50; width: 50px; height: 50px;"
+  style="
+    position: fixed;
+    top: 15px;
+    z-index: 50;
+    width: 50px;
+    height: 50px;
+    font-size: 1.2em;
+  "
   onclick="myFunction()"
 >
-  <div class="hamburger" style="opacity: 1; position: absolute;">
+  <i class="hamburger" style="visibility: visible;">
     {{ partial "icons/hamburger.html" . }}
-  </div>
+  </i>
 
-  <div class="cross" style="opacity: 0; position: absolute; top: 0;">
+  <i class="cross" style="visibility: hidden;">
     {{ partial "icons/cross.html" . }}
-  </div>
+  </i>
 </div>
 <script>
   let currentX, currentY;
 
   const showMenu = (menu, hamBurger, cross, main, footer) => {
-    hamBurger.style.opacity = "0";
-    cross.style.opacity = "1";
+    hamBurger.style.visibility = "hidden";
+    cross.style.visibility = "visible";
     currentX = window.scrollX;
     currentY = window.scrollY;
     menu.classList.remove("collapsed");
@@ -34,12 +41,12 @@
     currentX,
     currentY
   ) => {
-    hamBurger.style.opacity = "1";
-    cross.style.opacity = "0";
+    hamBurger.style.visibility = "visible";
+    cross.style.visibility = "hidden";
     menu.classList.add("collapsed");
     menu.style.width = "0px";
     main.style.display = "block";
-    footer ? (footer.style.display = "block") : undefined
+    footer ? (footer.style.display = "block") : undefined;
     window.scrollTo(currentX, currentY);
   };
 
