--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -1,4 +1,7 @@
-<div class="breadcrumb">
+<div
+  class="breadcrumb"
+  style="padding: 12px 0; line-height: 0.85em; text-align: right;"
+>
   {{ template "breadcrumbnav" (dict "p1" . "p2" .) }}
 </div>
 {{ define "breadcrumbnav" }}
@@ -8,18 +11,17 @@
 {{ template "breadcrumbnav" (dict "p1" .p1.Site.Home "p2" .p2 ) }}
 {{ end }}
 <span style="font-size: 0.8em;">
-  {{ if .p1.Parent }}
-  >
-  {{- end -}}
-    <a href="{{ if eq .p1 .p2 }}#{{ else }}{{ .p1.Permalink }}{{ end }}"
+  {{ if .p1.Parent }}/{{- end -}}
+  <a
+    href="{{ if eq .p1 .p2 }}#{{ else }}{{ .p1.Permalink }}{{ end }}"
     class="breadcrumb-link {{ if eq .p1 .p2 }}active{{ end }}"
-     style="margin-left: 5px; font-size: 0.85em; color:{{ if eq .p1 .p2 }}var(--primaryColor){{else}}var(--textColor){{ end }};"
-    >{{ if .p1.IsHome }}Home{{ end }}
-    {{ if gt (len .p1.Title) 15 }}
-    {{ substr .p1.Title 0 15 }}...
-    {{ else }}
-    {{ .p1.Title }}
-    {{ end }}</a
+    style="margin-left: 5px; font-size: 0.85em; color:{{ if eq .p1 .p2 }}var(--primaryColor){{else}}var(--textColor){{ end }};"
+    >{{- if .p1.IsHome -}}<i>{{- partial "icons/home" . -}}</i>{{- end -}}
+    {{- if gt (len .p1.Title) 15 -}}
+    {{- substr .p1.Title 0 15 -}}...
+    {{- else -}}
+    {{- .p1.Title -}}
+    {{- end -}}</a
   >
 </span>
 {{ end }}
