--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,4 +1,5 @@
 <div
+  class="social-icons"
   style="
     display: flex;
     justify-content: center;
@@ -10,12 +11,12 @@
 
   <a href="{{ $val }}">
     <i
-      class="social-icons"
+      class="social-icon"
       style="
-        margin: 0 5px;
         display: inline-flex;
         padding: 10px;
         border-radius: 50%;
+        align-self: center;
       "
       >{{ partial (print "icons/" $key ".html") . }}</i
     ></a
