--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
 <div
-  style="display: flex; flex-direction: column; margin-bottom: 0.5em;"
+  style="display: flex; flex-direction: column;"
 >
-  <h1 style="margin: 0 0 0.25em 0; text-decoration: underline; font-size: 2em;">
+  <h1 style="margin: 0 0 0.25em 0; font-size: 2em;">
     {{- .Title -}}
   </h1>
   <div class="sharing-icons">
