--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,4 +1,7 @@
-<div class="slide-menu collapsed" style="width: 0; overflow: hidden;">
+<div
+  class="slide-menu collapsed"
+  style="width: 0; overflow: hidden; 0px 0px 2px 2px black;"
+>
   <h1>
     <a href="/" style="white-space: nowrap;">Home</a>
   </h1>
