--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,11 +1,31 @@
-{{ if not .IsHome}}
 <header
-  style="background-color: inherit; display: block; width: 100%; height: 70px; max-width: 960px; position: fixed; z-index: 20; margin: 0; top: 0;"
+  style="
+    background-color: {{ if not .IsHome}} var(--bgDarker) {{ else }} inherit {{ end }};
+    display: block;
+    width: 100%;
+    height: 50px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    max-width: 960px;
+    position: fixed;
+    margin: 0;
+    top: 0;
+    box-shadow: {{ if not .IsHome}} 0px 0px 2px 2px black {{ else }} none {{ end }};
+  "
 >
+  {{ partial "hamburgerCross.html" . }}{{ if not .IsHome}}
   <div
-    style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-end; align-items: flex-end; padding: 0 1em 0 2em; height: 100%;"
+    style="
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+      align-items: flex-end;
+      padding: 0 1em 0 2em;
+      height: 100%;
+    "
   >
     {{ partial "breadcrumb.html" . }}
   </div>
+  {{ end }} {{- partial "menu.html" . -}}
 </header>
-{{ end }} {{ partial "hamburgerCross.html" . }}
