--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,13 +1,36 @@
 <div
   class="slide-menu collapsed"
-  style="width: 0; overflow: hidden; 0px 0px 2px 2px black;"
+  style="
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    background-color: #19092be3;
+    transition: all 0.5s;
+    position: fixed;
+    left: 0;
+    top: -100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  "
 >
-  <h1>
-    <a href="/" style="white-space: nowrap;">Home</a>
-  </h1>
-  {{ range .Site.Sections }}
-  <h1>
-    <a href="{{ .Permalink }}" style="white-space: nowrap;">{{ .Title }}</a>
-  </h1>
-  {{ end }}
+  <div
+    style="
+      background-color: var(--bgColor);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 6px;
+      border: solid 1px var(--textColor);
+      border-radius: 5px;
+      box-shadow: 3px 3px 5px 2px black;
+    "
+  >
+    <a class="menu-item" href="/">Home</a>
+
+    {{ range .Site.Sections }}
+    <a class="menu-item" href="{{ .Permalink }}">{{ .Title }}</a>
+    {{ end }}
+  </div>
 </div>
