--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,23 +9,43 @@
   --codeColor: #51ef5b;
 }
 
+html {
+  margin: 0;
+  overflow-y: scroll;
+  margin-right: 0;
+}
+
 body {
+  width: 95%;
+  margin: auto;
   position: relative;
   z-index: 10;
   display: flex;
   flex-direction: column;
-  padding: 0;
   max-width: 960px;
-  min-height: 100vh;
   margin: auto;
   color: var(--textColor);
   background-color: var(--bgColor);
   font-family: "Mukta", sans-serif;
   font-weight: 300;
   font-size: 1.2em;
-  overflow-y: scroll;
+}
+header {
+  width: 95%;
+  height: 60px;
+  max-width: 960px;
+  position: fixed;
+  top: 0;
+  z-index: 30;
+}
+header,
+footer {
+  flex: none;
 }
 
+main {
+  flex: 1 1 0%;
+}
 code {
   font-size: 1em;
   color: var(--codeColor);
@@ -38,15 +58,6 @@ pre {
   font-size: 0.85em;
   background-color: var(--bgDarker) !important;
   overflow: auto;
-}
-
-header,
-footer {
-  flex: none;
-}
-
-main {
-  flex: 1 1 0%;
 }
 
 h1,
@@ -102,7 +113,16 @@ blockquote {
 .footnotes {
   font-size: 0.8em;
 }
-
+.menu-item {
+  display: block;
+  font-size: 1.2em !important;
+  width: 100%;
+  padding: 0 0.5em;
+  box-sizing: border-box;
+}
+.menu-item:hover {
+  background-color: var(--bgLighter);
+}
 table {
   border-collapse: collapse;
 }
@@ -159,25 +179,6 @@ tbody {
   color: var(--textColor);
 }
 
-.slide-menu {
-  background-color: var(--bgColor);
-  max-width: 960px;
-  height: 100vh;
-  transition: all 0.5s;
-  position: fixed;
-  z-index: 30;
-  left: 0;
-  right: 0;
-  margin: auto;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.slide-menu > h1 {
-  font-size: 1.5em;
-}
 ul.pagination {
   display: flex;
   flex-direction: row;
