--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -48,6 +48,7 @@
       ) {
         initialY = currentY;
         header.style.top = "0";
+        return;
       }
 
       if (currentY - initialY > 60) {
@@ -55,7 +56,7 @@
         header.style.top = "-58px";
       }
 
-      if (currentY - initialY < -5) {
+      if (currentY - initialY < -5 || currentY < 60) {
         initialY = currentY;
         header.style.top = "0";
       } 
