--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,6 @@
 {{ define "main" }}
 <div
   style="
-    height: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -10,57 +9,22 @@
   "
 >
   {{ partial "intro.html" . }}
-  <div
+  <img
+    src="{{ .Site.Params.mainImage | relURL }}"
     style="
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 80vw;
-      height: 80vw;
+      border-radius: 50%;
+      background-color: inherit;
+      opacity: 1;
+      visibility: visible;
+      transition: opacity 0.8s, width 0.8s, transform 0.8s;
+      width: 100%;
       min-width: 250px;
       min-height: 250px;
-      max-width: 400px;
-      max-height: 400px;
+      max-width: 300px;
+      max-height: 300px;
+      transform: none;
     "
-  >
-    <div
-      style="
-        position: absolute;
-        opacity: 0;
-        padding: 25px;
-        min-width: 250px;
-        min-height: 250px;
-        max-width: 400px;
-        max-height: 400px;
-        box-sizing: border-box;
-        transition: opacity 0.8s;
-        z-index: 10;
-      "
-      class="more-info"
-    >
-      <p style="margin: 0 0 0.25em 0; font-size: 0.9em; text-align: center;">
-        {{ .Site.Params.about }}
-      </p>
-      {{ partial "social.html" . }}
-    </div>
-    <div
-      class="profile-image"
-      style="
-        background-color: inherit;
-        opacity: 1;
-        visibility: visible;
-        transition: opacity 0.8s, width 0.8s, transform 0.8s;
-        width: 100%;
-        max-width: 325px;
-        transform: none;
-      "
-    >
-      <img
-        src="{{ .Site.Params.image | relURL }}"
-        style="width: 100%; height: 100%; border-radius: 100%;"
-      />
-    </div>
-  </div>
+  />
+  {{ partial "social.html" . }}
 </div>
 {{ end }}
