--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,12 @@
 <header
   style="
+  width: 95%;
+  max-width: 960px;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  transition: all 0.3s;
+  height: {{ if not .IsHome}}60px{{ else }}0{{ end }};
     box-shadow: {{ if not .IsHome}} 0px 0px 2px 2px black {{ else }} none {{ end }};
     background-color: {{ if not .IsHome}} var(--bgDarker) {{ else }} inherit {{ end }};
   "
