--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -14,6 +14,7 @@
       class="social-icon"
       style="
         display: inline-flex;
+        font-size: 1.4em;
         padding: 10px;
         border-radius: 50%;
         align-self: center;
