--- a/layouts/partials/about/publications.html
+++ b/layouts/partials/about/publications.html
@@ -15,7 +15,7 @@
       >{{ else }} <u>{{- .title -}}</u> {{end -}}. {{ .journal }}.
     </p>
     {{ if .abstract }}
-    <blockquote style="margin: 0 0 0 1em;">
+    <blockquote style="margin: 0 0 0 1em; font-size: 0.9em;">
       <strong style="font-variant: small-caps; text-decoration: underline;"
         >Abstract</strong
       ><p style="margin: 0;">{{ .abstract }}</p>
