Moved about to section folder in layout

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,6 +26,6 @@
     "
   />
   {{ partial "social.html" . }}
-  {{ .Site.Params.shortAbout }}
+  <span style="text-align: center;">{{ .Site.Params.shortAbout }}</span>
 </div>
 {{ end }}
