--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
       position: fixed;
       bottom: 60px;
       margin: auto;
-      width: 95%;
+      width: 95vw;
       max-width: 960px;
     "
   >
