--- a/layouts/section/about.html
+++ b/layouts/section/about.html
@@ -18,7 +18,7 @@
     border-bottom: solid 3px;
   "
 >
-  <h1 style="margin: 0.15em 0;">
+  <h1 style="margin: 1em 0 0.15em 0;">
     {{ .Params.prefix }} {{ .Params.name }}, {{ .Params.suffix }}
   </h1>
   <h2 style="margin: 0.15em 0;">{{ .Params.jobTitle }}</h2>
